force-app/main/default/objects/SCOC__SummaryInformation__c/SCOC__SummaryInformation__c.object-meta.xml
<CustomObject>
    <description>Response Entity Summary Information</description>
    <label>Summary Information</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Summary Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>