force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__AddressDiscrepancy__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AddressDiscrepancy__c</fullName>
    <description>The system automatically populates this optional text field to indicate the Address Discrepancy from the vendor response. By default, it is blank.</description>
    <label>Address Discrepancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>