force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__AmountPastDue__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AmountPastDue__c</fullName>
    <description>Total amount past due</description>
    <label>Amount Past Due</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>