force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__AppsReferencedCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AppsReferencedCount__c</fullName>
    <description>AppsReferencedCount</description>
    <label>AppsReferencedCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>