force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__BankMatch__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BankMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BankMatch</description>
    <inlineHelpText>BankMatch</inlineHelpText>
    <label>BankMatch</label>
    <type>Checkbox</type>
</CustomField>