force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__BankruptcyAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BankruptcyAmount__c</fullName>
    <description>Total bankruptcy amount</description>
    <label>Bankruptcy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>