force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CifasPlusMigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CifasPlusMigrationStatus__c</fullName>
    <description>CifasPlusMigrationStatus</description>
    <label>CifasPlusMigrationStatus</label>
    <length>40</length>
    <type>Text</type>
</CustomField>