force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ClosedWithBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ClosedWithBalanceAmount__c</fullName>
    <description>Dollar amount of closed account balances</description>
    <label>Closed With Balance Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>