force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ClosedWithBalanceMonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ClosedWithBalanceMonthlyPayment__c</fullName>
    <description>Dollar amount of closed monthly payment account balances</description>
    <label>Closed With Balance Monthly Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>