force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ClosedWithBalancePastDue__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ClosedWithBalancePastDue__c</fullName>
    <description>Dollar amount of past due closed account balances</description>
    <label>Closed With Balance Past Due</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>