force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CollectionAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CollectionAmount__c</fullName>
    <description>Total collection amount</description>
    <label>Collection Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>