force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ConfidenceLevelIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ConfidenceLevelIndicator__c</fullName>
    <description>Confidence level indicator</description>
    <label>Confidence Level Indicator</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>