force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CountOfCourtAndInsolvencyInformation__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CountOfCourtAndInsolvencyInformation__c</fullName>
    <description>CountOfCourtAndInsolvencyInformation</description>
    <label>CountOfCourtAndInsolvencyInformation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>