force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CountOfLendersBehindOpenInsightAccounts__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CountOfLendersBehindOpenInsightAccounts__c</fullName>
    <description>CountOfLendersBehindOpenInsightAccounts</description>
    <label>CountOfLendersBehindOpenInsightAccounts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>