force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CreditSummaryReportingPeriod__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditSummaryReportingPeriod__c</fullName>
    <description>Reporting period of credit summary</description>
    <label>Credit Summary Reporting Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>