force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CurrentlyListedByBT__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CurrentlyListedByBT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CurrentlyListedByBT</description>
    <inlineHelpText>CurrentlyListedByBT</inlineHelpText>
    <label>CurrentlyListedByBT</label>
    <type>Checkbox</type>
</CustomField>