force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__CurrentlyOnElectoralRoll__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CurrentlyOnElectoralRoll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CurrentlyOnElectoralRoll</description>
    <inlineHelpText>CurrentlyOnElectoralRoll</inlineHelpText>
    <label>CurrentlyOnElectoralRoll</label>
    <type>Checkbox</type>
</CustomField>