force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__DataFailCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DataFailCount__c</fullName>
    <description>DataFailCount</description>
    <label>DataFailCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>