force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__DaysBeyondTerms__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DaysBeyondTerms__c</fullName>
    <description>The system automatically populates this optional number field to indicate the Days Beyond Terms from the vendor response. By default, it is blank.</description>
    <label>Days Beyond Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>