force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__DobMatchOnElectoralRollAttainerDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DobMatchOnElectoralRollAttainerDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DobMatchOnElectoralRollAttainerDate</description>
    <inlineHelpText>DobMatchOnElectoralRollAttainerDate</inlineHelpText>
    <label>DobMatchOnElectoralRollAttainerDate</label>
    <type>Checkbox</type>
</CustomField>