force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__DobMatchOnInsight__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DobMatchOnInsight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DobMatchOnInsight</description>
    <inlineHelpText>DobMatchOnInsight</inlineHelpText>
    <label>DobMatchOnInsight</label>
    <type>Checkbox</type>
</CustomField>