force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__EmployerMatch__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EmployerMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EmployerMatch</description>
    <inlineHelpText>EmployerMatch</inlineHelpText>
    <label>EmployerMatch</label>
    <type>Checkbox</type>
</CustomField>