force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__FraudAlert__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FraudAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fraud Alert</description>
    <inlineHelpText>Fraud Alert</inlineHelpText>
    <label>Fraud Alert</label>
    <type>Checkbox</type>
</CustomField>