force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__FreezeIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FreezeIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Freeze Indicator</description>
    <inlineHelpText>Freeze Indicator</inlineHelpText>
    <label>Freeze Indicator</label>
    <type>Checkbox</type>
</CustomField>