force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__HighestDBTPrevious5Quarters__c.field-meta.xml
<CustomField>
    <fullName>SCOC__HighestDBTPrevious5Quarters__c</fullName>
    <description>The system automatically populates this optional number field to indicate the Highest DBT Previous 5 Quarters from the vendor response. By default, it is blank.</description>
    <label>Highest DBT Previous 5 Quarters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>