force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__HomePhoneMatch__c.field-meta.xml
<CustomField>
    <fullName>SCOC__HomePhoneMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HomePhoneMatch</description>
    <inlineHelpText>HomePhoneMatch</inlineHelpText>
    <label>HomePhoneMatch</label>
    <type>Checkbox</type>
</CustomField>