force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__IndustryPaymentIndex__c.field-meta.xml
<CustomField>
    <fullName>SCOC__IndustryPaymentIndex__c</fullName>
    <description>The system automatically populates this optional numeric field to indicate the Industry Payment Index from the vendor response. By default, it is blank.</description>
    <label>Industry Payment Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>