force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InquiriesLast60DaysCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InquiriesLast60DaysCount__c</fullName>
    <description>Inquiries Last 60 Days Count</description>
    <label>Inquiries Last 60 Days Count</label>
    <length>4</length>
    <type>Text</type>
</CustomField>