force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InquiriesLastSixMonths__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InquiriesLastSixMonths__c</fullName>
    <description>Total number of inquiries within the past 6 months.</description>
    <label>Inquiries in Last Six Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>