force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InstallmentBalance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InstallmentBalance__c</fullName>
    <description>Dollar amount of installment loans</description>
    <label>Installment Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>