force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InstallmentCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InstallmentCreditLimit__c</fullName>
    <description>Installment credit limit</description>
    <label>Installment Credit Limit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>