force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InstallmentHighCredit__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InstallmentHighCredit__c</fullName>
    <description>Installment high credit</description>
    <label>Installment High Credit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>