force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InstallmentMonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InstallmentMonthlyPayment__c</fullName>
    <label>Installment Monthly Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>