force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__InstallmentTradeCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InstallmentTradeCount__c</fullName>
    <description>Total number of installment tradelines.</description>
    <label>Installment Trade Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>