force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__Is_Derogatory__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Is_Derogatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional checkbox to show if the customer included derogatory remarks as indicated from the integration response. There is no default. If not included in the response the field remains blank.</description>
    <inlineHelpText>This system-populated field displays a checkbox to show if the customer included derogatory remarks as indicated from the integration response.</inlineHelpText>
    <label>Derogatory Flag</label>
    <type>Checkbox</type>
</CustomField>