force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__JudgmentsAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__JudgmentsAmount__c</fullName>
    <description>Total judgments amount</description>
    <label>Judgments Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>