force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__LegalItemsAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LegalItemsAmount__c</fullName>
    <description>Total legal items amount</description>
    <label>Legal Items Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>