force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__LinkedForwardingAddressFound__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LinkedForwardingAddressFound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LinkedForwardingAddressFound</description>
    <inlineHelpText>LinkedForwardingAddressFound</inlineHelpText>
    <label>LinkedForwardingAddressFound</label>
    <type>Checkbox</type>
</CustomField>