force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__LockedIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LockedIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Locked Indicator</description>
    <inlineHelpText>Locked Indicator</inlineHelpText>
    <label>Locked Indicator</label>
    <type>Checkbox</type>
</CustomField>