force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MonthlyAverageDBT__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MonthlyAverageDBT__c</fullName>
    <description>The system automatically populates this optional number field to indicate the Monthly Average DBT from the vendor response. By default, it is blank.</description>
    <label>Monthly Average DBT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>