force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MonthlyPayment__c</fullName>
    <description>Dollar amount of monthly payment</description>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>