force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MonthlyPaymentPartialFlag__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MonthlyPaymentPartialFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field evaluates to false if all tradelines are included in monthly payment amount</description>
    <inlineHelpText>This field evaluates to false if all tradelines are included in monthly payment amount</inlineHelpText>
    <label>Monthly Payment Partial Flag</label>
    <type>Checkbox</type>
</CustomField>