force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MostRecentBankruptcyDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MostRecentBankruptcyDate__c</fullName>
    <description>The system automatically populates this optional date field to indicate the Most Recent Bankruptcy Date from the vendor response. By default, it is blank.</description>
    <label>Most Recent Bankruptcy Date</label>
    <type>Date</type>
</CustomField>