force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MostRecentCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MostRecentCollectionDate__c</fullName>
    <description>Most recent collection date on file.</description>
    <label>Most Recent Collection Date</label>
    <type>Date</type>
</CustomField>