force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MostRecentLegalDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MostRecentLegalDate__c</fullName>
    <description>Most recent legal date on file.</description>
    <label>Most Recent Legal Date</label>
    <type>Date</type>
</CustomField>