force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__MostRecentLienDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MostRecentLienDate__c</fullName>
    <description>Most recent lien date on file.</description>
    <label>Most Recent Lien Date</label>
    <type>Date</type>
</CustomField>