force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NationalIdentificationDiscrepancy__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NationalIdentificationDiscrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system populates this optional boolean field to display if there is a national identification discrepancy. By default, it is null.</description>
    <inlineHelpText>National Identification Discrepancy</inlineHelpText>
    <label>National Identification Discrepancy</label>
    <type>Checkbox</type>
</CustomField>