force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NinetyDayCounter__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NinetyDayCounter__c</fullName>
    <description>Number of 90 to 180 day delinquencies.</description>
    <label>Ninety Day Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>