force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NoHitIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NoHitIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NoHitIndicator</description>
    <inlineHelpText>NoHitIndicator</inlineHelpText>
    <label>NoHitIndicator</label>
    <type>Checkbox</type>
</CustomField>