force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfAccountsInDispute__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfAccountsInDispute__c</fullName>
    <description>Number of accounts in dispute</description>
    <label>Number of Accounts in Dispute</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>