force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfBankruptcies__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfBankruptcies__c</fullName>
    <description>Total number of bankruptcies.</description>
    <label>Number of Bankruptcies</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>