force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfChargeOffs__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfChargeOffs__c</fullName>
    <description>Total number of charge-offs.</description>
    <label>Number of Charge-Offs</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>