force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberofJudgments__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberofJudgments__c</fullName>
    <description>Total number of judgments items.</description>
    <label>Number of Judgment Items</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>