force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfJudgmentsSatisfied__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfJudgmentsSatisfied__c</fullName>
    <description>Total number of judgments satisfied.</description>
    <label>Number Of Judgments Satisfied</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>