force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfLegalItems__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfLegalItems__c</fullName>
    <description>Total number of legal items.</description>
    <label>Number of Legal Items</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>