force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfLiens__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfLiens__c</fullName>
    <description>Total number of liens.</description>
    <label>Number of Liens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>