force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberOfPublishedRecords__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberOfPublishedRecords__c</fullName>
    <label>Number of Published Records</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>