force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__NumberofUCCFilings__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NumberofUCCFilings__c</fullName>
    <description>The system automatically populates this optional number field to indicate the Number of UCC Filings from the vendor response. By default, it is blank.</description>
    <label>Number of UCC Filings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>