force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OldestTradeDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OldestTradeDate__c</fullName>
    <description>Oldest date of all tradelines on file.</description>
    <label>Oldest Trade Date</label>
    <type>Date</type>
</CustomField>