force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OnCIFAS__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OnCIFAS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnCIFAS</description>
    <inlineHelpText>OnCIFAS</inlineHelpText>
    <label>OnCIFAS</label>
    <type>Checkbox</type>
</CustomField>