force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OnCIFASPlus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OnCIFASPlus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnCIFASPlus</description>
    <inlineHelpText>OnCIFASPlus</inlineHelpText>
    <label>OnCIFASPlus</label>
    <type>Checkbox</type>
</CustomField>