force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OnHalo__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OnHalo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnHalo</description>
    <inlineHelpText>OnHalo</inlineHelpText>
    <label>OnHalo</label>
    <type>Checkbox</type>
</CustomField>