force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OnHMTreasurySanctions__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OnHMTreasurySanctions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnHMTreasurySanctions</description>
    <inlineHelpText>OnHMTreasurySanctions</inlineHelpText>
    <label>OnHMTreasurySanctions</label>
    <type>Checkbox</type>
</CustomField>