force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OnOFAC__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OnOFAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnOFAC</description>
    <inlineHelpText>OnOFAC</inlineHelpText>
    <label>OnOFAC</label>
    <type>Checkbox</type>
</CustomField>