force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OnONS__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OnONS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnONS</description>
    <inlineHelpText>OnONS</inlineHelpText>
    <label>OnONS</label>
    <type>Checkbox</type>
</CustomField>