force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OpenTradeCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OpenTradeCount__c</fullName>
    <description>Total number of open tradelines.</description>
    <label>Open Trade Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>