force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__OverallOTFAIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OverallOTFAIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OverallOTFAIndicator</description>
    <inlineHelpText>OverallOTFAIndicator</inlineHelpText>
    <label>OverallOTFAIndicator</label>
    <type>Checkbox</type>
</CustomField>