force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__PaidAccountsCounter__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PaidAccountsCounter__c</fullName>
    <description>Total number of paid accounts.</description>
    <label>Paid Accounts Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>