force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__PassportInfoVerified__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PassportInfoVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PassportInfoVerified</description>
    <inlineHelpText>PassportInfoVerified</inlineHelpText>
    <label>PassportInfoVerified</label>
    <type>Checkbox</type>
</CustomField>