force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__PublicRecordCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PublicRecordCount__c</fullName>
    <description>Total number of public records.</description>
    <label>Public Record Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>