force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RealEstatePayment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RealEstatePayment__c</fullName>
    <description>Dollar amount of real estate payments</description>
    <label>Real Estate Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>