force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReferenceNumber__c</fullName>
    <description>ReferenceNumber</description>
    <label>ReferenceNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>