force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ReposessionIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReposessionIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reposession Indicator</description>
    <inlineHelpText>Reposession Indicator</inlineHelpText>
    <label>Reposession Indicator</label>
    <type>Checkbox</type>
</CustomField>