force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RevolvingBalance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RevolvingBalance__c</fullName>
    <description>Dollar amount of revolving balance</description>
    <label>Revolving Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>