force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RevolvingCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RevolvingCreditLimit__c</fullName>
    <description>The system populates this optional currency field to display revolving credit limit. By default, it is null.</description>
    <label>Revolving Credit Limit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>