force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RevolvingHighCredit__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RevolvingHighCredit__c</fullName>
    <description>The system populates this optional currency field to display revolving high credit. By default, it is null.</description>
    <label>Revolving High Credit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>