force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RevolvingMonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RevolvingMonthlyPayment__c</fullName>
    <description>The system populates this optional currency field to display revolving monthly payment. By default, it is null.</description>
    <label>Revolving Monthly Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>