force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RevolvingTradeCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RevolvingTradeCount__c</fullName>
    <description>Total number of revolving tradelines.</description>
    <label>Revolving Trade Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>