force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__RulesHitCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RulesHitCount__c</fullName>
    <description>RulesHitCount</description>
    <label>RulesHitCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>