force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__SatisfactoryAccountsCounter__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SatisfactoryAccountsCounter__c</fullName>
    <description>Total number of satisfactory accounts.</description>
    <label>Satisfactory Accounts Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>