force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__ThirtyDayCounter__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ThirtyDayCounter__c</fullName>
    <description>Number of 30 day delinquencies.</description>
    <label>Thirty Day Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>