force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__TotalAlerts__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TotalAlerts__c</fullName>
    <description>TotalAlerts</description>
    <label>TotalAlerts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>